--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ add_subdirectory(tools)
 set(LLVM_MOS_PLATFORM rp6502)
 find_package(llvm-mos-sdk REQUIRED)
 project(MY-RP6502-PROJECT)
-add_executable(cube)
-rp6502_executable(cube)
-target_sources(cube PRIVATE
+add_executable(raycast)
+rp6502_executable(raycast)
+target_sources(raycast PRIVATE
     src/colors.c
     src/bitmap_graphics_db.c
     src/main.c
